# words-tui

./: .gitignore  CHANGELOG.md  README.md  app.py  dev-requirements.txt  pyproject.toml  requirements.txt  text_editor.py
.github/workflows/: build-and-test.yml  publish.yml
src/words_tui/: __main__.py
src/words_tui/cli/: __init__.py
src/words_tui/tui/: app.css  app.py  db.py  settings.css  text_editor.py
