[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "words-tui"
dynamic = ["version"]
description = 'A TUI (Text User Interface) app for daily writing.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Anže Pečar", email = "anze@pecar.me" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click", "textual", "peewee", "tree-sitter"
]

[project.urls]
Documentation = "https://github.com/anze3db/words-tui#readme"
Issues = "https://github.com/anze3db/words-tui/issues"
Source = "https://github.com/anze3db/words-tui"
Changelog = "https://github.com/anze3db/words-tui/blob/main/CHANGELOG.md"

[project.scripts]
words-tui = "words_tui.cli:words_tui"

[tool.hatch.version]
path = "src/words_tui/__about__.py"

[tool.hatch.envs.default]
python = "3.12"
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "pytest-watch",
  "textual-dev",
  "types-peewee"
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.lint]
extra-dependencies = [
  "mypy>=1.0.0",
  "ruff>=0.1.6",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/words_tui tests}"
style = [
  "ruff {args:.}",
  "ruff format {args:.}",
]
fmt = [
  "ruff {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.ruff]
target-version = "py38"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["words_tui"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["words_tui", "tests"]
branch = true
parallel = true
omit = [
  "src/words_tui/__about__.py",
]

[tool.coverage.paths]
words_tui = ["src/words_tui", "*/words-tui/src/words_tui"]
tests = ["tests", "*/words-tui/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
